chore: setup Gemfiles and rubocop-rspec in precommit

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,8 @@
-require: rubocop-rspec
+require:
+  - rubocop-rspec
+
+AllCops:
+  NewCops: enable
 
 # Overwrite or add rules to create your own house style
 #
