ci: ignore vendor for rubocop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,6 +4,7 @@ require:
 AllCops:
   NewCops: enable
   Exclude:
+    - 'vendor/**/*'
     - 'bin/**/*'
 
 # Overwrite or add rules to create your own house style
