--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,3 +23,8 @@ repos:
       - id: rubocop
         args: ['--autocorrect']
         additional_dependencies: ['rubocop-rspec']
+
+  - repo: https://github.com/mattlqx/pre-commit-ruby
+    rev: v1.3.6
+    hooks:
+    - id: rspec
