--- a/.vscode.examples/launch.json
+++ b/.vscode.examples/launch.json
@@ -5,7 +5,7 @@
             "type": "ruby_lsp",
             "name": "Debug main",
             "request": "launch",
-            "program": "ruby ${workspaceFolder}/main.rb inputs/input_1.txt inputs/input_2.txt inputs/input_3.txt"
+            "program": "ruby ${workspaceFolder}/main.rb inputs/input_1.txt"
         }
     ]
 }
